Auth with register working

--- a/auth/presentation/src/main/res/values/strings.xml
+++ b/auth/presentation/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="ott">Overtime Tracker</string>
-    <string name="welcome_to_overtime_tracker">Welcome to Overtime Tracker App</string>
     <string name="overtime_tracker_description">An app to keep track of any overtime you do over periods you can define</string>
     <string name="sign_up">Sign up</string>
     <string name="sign_up_description">Navigate to sign up form</string>
@@ -20,4 +19,6 @@
     <string name="at_least_one_uppercase">At least one uppercase</string>
     <string name="at_least_one_lowecase">At least one lowercase</string>
     <string name="register">Register</string>
+    <string name="welcome_to_overtime_tracker">Welcome to overtime Tracker App</string>
+    <string name="email_already_in_use">Email already in use</string>
 </resources>
