--- a/auth/presentation/src/main/res/values/strings.xml
+++ b/auth/presentation/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="register">Register</string>
     <string name="welcome_to_overtime_tracker">Welcome to overtime Tracker App</string>
     <string name="email_already_in_use">Email already in use</string>
+    <string name="registration_successful_you_can_login">Registration successful! You can log in now</string>
+    <string name="dont_have_an_account">Don\'t have an account</string>
+    <string name="invalid_credentials">Can\'t login Invalid Credentials</string>
+    <string name="login_successful">Login Successful</string>
 </resources>
